# jipp2

./: .gitignore  CMakeLists.txt  README.md
allocation_basics/: main.cpp
allocation_basics/allocation_basics/: cmake_install.cmake
lab1/: 1.cpp  2.cpp  a.out  notatki
lab10/pliki/: CMakeLists.txt
lab10/szablony/: CMakeLists.txt
lab11/csvlib/: CMakeLists.txt
lab12/conv/: CMakeLists.txt
lab2/simpleCalc/: CMakeLists.txt
lab2_calculator/: main.cpp
lab2_calculator/include/: calc.h
lab2_calculator/src/: calc.cpp  main.cpp
lab3/Funkcja przyjmująca tablicę i dokonująca na niej obliczeń/: a.out  zad.cpp
lab3/Obsługa błędów/: a.out  zad1.cpp  zad2.cpp
lab3/Prosta biblioteka/: CMakeLists.txt
lab3/Przeciążanie funckji/: a.out  zad1.cpp
lab3/Przekazywanie przez wskaźnik/: a.out  main.cpp
lab4/1/: a.out  main  main.cpp
lab4/2/: a.out  main.cpp
lab4/4/: main.cpp
lab4/5/: a.out  main.cpp  main2.cpp
lab4/6/: main.cpp
lab5/3.0/: CMakeLists.txt
lab6/3.0/: CMakeLists.txt
lab7/dziedziczenie/: CMakeLists.txt
lab8/: CMakeLists.txt
lab8/include/: notes.h
lab8/src/: main.cpp  notes.cpp
lab9/Iteratory/: CMakeLists.txt
lab9/StopExample/: Line.cpp
projekt1/: CMakeLists.txt
projekt1/include/: matrix.h
projekt1/matrixApp/: CMakeLists.txt  main.cpp
projekt1/matrixLib/: CMakeLists.txt
projekt1/matrixLib/include/: matrix.h
projekt1/matrixLib/src/: matrix.cpp
projekt1/src/: main.cpp  matrix.cpp
projekt2/: CMakeLists.txt  wymagania.txt
projekt2/include/: chess.h
projekt2/src/: bishop.cpp  board.cpp  king.cpp  knight.cpp  main.cpp  (+5 more)
(+38 files in other folders)
